# premiere-cli

./: CHANGELOG.md  README.md  RELEASE.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/major-release/: SKILL.md
.claude/skills/patch/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: publish.yml  release.yml
docs/: BUILD_FINDINGS.md  COMMANDS.md  DESKTOP_DRIVER_NOTES.md  PREMIERE_API_NOTES.md  QE_DOM_NOTES.md
skills/premiere-cli/: SKILL.md
src/premiere_bridge/: __init__.py  cli.py  log.py  panel_install.py
src/premiere_bridge/panel/: .debug  index.html
src/premiere_bridge/panel/CSXS/: manifest.xml
src/premiere_bridge/panel/css/: style.css
src/premiere_bridge/panel/host/commands/: add-adjustment-layer.jsx  add-audio-keyframes.jsx  add-custom-metadata-field.jsx  add-keyframe.jsx  add-marker-to-project-item.jsx  add-marker.jsx  add-text-overlay.jsx  add-to-render-queue.jsx  add-to-timeline.jsx  add-track.jsx  adjust-audio-levels.jsx  attach-custom-property.jsx  auto-reframe-sequence.jsx  batch-add-transitions.jsx  batch-rename-clips.jsx  batch-set-clips-enabled.jsx  clear-item-in-out.jsx  clear-sequence-in-out.jsx  close-all-source-clips.jsx  color-correct.jsx  copy-effects-between-clips.jsx  create-caption-track.jsx  create-sequence.jsx  debug-qe-inspect.jsx  detach-proxy.jsx  encode-project-item.jsx  export-omf.jsx  export-sequence.jsx  extract-audio-track.jsx  extract-selection.jsx  find-items-by-media-path.jsx  get-active-sequence.jsx  get-all-project-paths.jsx  get-bin-contents.jsx  get-clip-at-position.jsx  get-clip-speed.jsx  get-color-space.jsx  get-duplicate-media.jsx  get-effect-properties.jsx  get-export-file-extension.jsx  (+95 more)
src/premiere_bridge/panel/host/presets/: default-4k-25fps.sqpreset
src/premiere_bridge/panel/js/: cs-interface.js  main.js
src/premiere_cli/: __init__.py  cli.py  desktop_driver.py  desktop_overlay.py  init_project.py  notify_daemon.py  panel_install.py
src/premiere_cli/panel/: .debug
src/premiere_cli/panel/CSXS/: manifest.xml
src/premiere_cli/panel/host/: index.jsx
src/premiere_cli/panel/host/commands/: add-transition.jsx  apply-audio-effect.jsx  apply-effect.jsx  apply-lut.jsx  (+90 more)
src/premiere_cli/panel/js/: main.js
src/premiere_cli/templates/empty-project/: Untitled.prproj
tests/: test_cli.py  test_desktop_driver.py  test_log.py
(+1 files in other folders)
