[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "premiere-cli"
# Keep in lockstep with premiere_cli.__version__ and PANEL_VERSION in
# src/premiere_cli/panel/js/main.js.
version = "0.2.0"
description = "Drive Adobe Premiere Pro from the command line: a Python CLI plus a bundled CEP bridge panel exposing Premiere's scripting APIs over local HTTP"
readme = "README.md"
license = {text = "CC-BY-SA-4.0"}
requires-python = ">=3.10"
# Deliberately zero runtime dependencies — the CLI is stdlib-only, so
# `pipx install` / `uv tool install` stays instant and conflict-free.
dependencies = []

[project.urls]
Repository = "https://github.com/stefanwebb/premiere-cli"

[project.scripts]
premiere-cli = "premiere_cli.cli:main"
premiere-log = "premiere_cli.log:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# The entire CEP panel ships inside the wheel so `premiere-cli install-panel`
# can deploy it without a checkout.
premiere_cli = [
    "panel/**/*",
    "panel/.debug",
    "templates/**/*",
]
